GPC/tests/examples/fail/nonExistantObject.gpc

a = GPRM::Test::Test();

int GPRM::Test::nonExistantObject() {
    return 1;
}
